# chipmos-wb_

./: CMakeLists.txt  experiments.py  main.cpp  main.cu  main.py
include/: chromosome.h  da.h  entity.h  infra.h  job.h  lot.h  machine.h  machine_base.h  population.h
src/: arrival.cpp  chromosome.cpp  da.cpp  entity.cpp  infra.cpp  job.cpp  lot.cpp  machine.cpp  machines.cpp  population.cu  route.cpp
tests/test_machines/: test_machines_canJobRunOnTheMachine.cpp  test_machines_distributeAResource.cpp
