cmake_minimum_required(VERSION 3.8)
project(ChipmosWb LANGUAGES CXX CUDA)
include_directories(${CMAKE_SOURCE_DIR})
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O3 --default-stream per-thread --gpu-architecture=compute_75 --gpu-code=sm_75")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")

# file(GLOB_RECURSE cppsrc ./src/*.cpp)
file(GLOB_RECURSE cusrc ./src/*.cu)
set(CUDA_SRC ./src/job.cpp ./src/machine.cpp ./src/infra.cpp)
set(CPP_SRC ./src/arrival.cpp ./src/chromosome.cpp ./src/condition_card.cpp ./src/csv.cpp ./src/da.cpp ./src/entity.cpp ./src/lot.cpp ./src/route.cpp)
set_source_files_properties(${CUDA_SRC} PROPERTIES LANGUAGE CUDA)

add_executable(main main.cu ${CPP_SRC} ${cusrc} ${CUDA_SRC})
add_subdirectory(lib)
set_property(TARGET main PROPERTY CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(main lib)
# add_subdirectory(tests)
# add_subdirectory(examples)
